<package>
  <name>ros_glc</name>
  <version>0.0.0</version>
  <description>Includes emacs scripts, ros tool alias generator, and launch doc generator.</description>

  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://ros.org/wiki/glc</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ryohei Ueda (ueda@jsk.t.u-tokyo.ac.jp)</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>git</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <!-- <build_depend>mjpeg_server</build_depend> -->
  <!-- <run_depend>mjpeg_server</run_depend> -->
  <!-- <test_depend>mjpeg_server</test_depend> -->
  <!-- <test_depend>roslint</test_depend> -->
  <!-- <test_depend>rostest</test_depend> -->

</package>

